data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2441.wast
;; 2. **Test Missing End for Nested Block**:    - Description: Define a nested block structure but deliberately omit the `end` for the inner block.    - Constraint: Verify if the implementation can catch missing `end` instructions.    - CFG Relevance: A missing `end` can lead to an incomplete CFG, causing improper nesting and branching paths.

(assert_invalid
  (module (func $missing-end-nested-block
    (block 
      (block 
        (i32.const 1)
      ;; missing end here
    )
  ))
  "unexpected end of section or function"
)